temp: disable CORS restrictions [WIP]